--- a/Android/app/src/main/res/layout/activity_arena.xml
+++ b/Android/app/src/main/res/layout/activity_arena.xml
@@ -50,7 +50,6 @@
         android:layout_width="184dp"
         android:layout_height="215dp"
         android:layout_marginStart="408dp"
-        android:layout_marginTop="16dp"
         android:background="@drawable/border"
         android:padding="5dp"
         android:textSize="12sp"
@@ -61,49 +60,51 @@
         android:id="@+id/xAxisTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="12dp"
         android:text="0"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/xcoordtext"
         app:layout_constraintEnd_toStartOf="@+id/ycoordtext"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toTopOf="@+id/xcoordtext" />
 
     <TextView
         android:id="@+id/xcoordtext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:fontFamily="casual"
         android:text="X: "
         android:textColor="@color/darkblue"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/timerReset"
         app:layout_constraintEnd_toStartOf="@+id/xAxisTextView"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toTopOf="@+id/timerReset"
+        app:layout_constraintVertical_bias="0.888" />
 
     <TextView
         android:id="@+id/ycoordtext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:fontFamily="casual"
         android:text="Y: "
         android:textColor="@color/darkblue"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/xcoordtext"
         app:layout_constraintEnd_toStartOf="@+id/yAxisTextView"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toTopOf="@+id/xcoordtext"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/yAxisTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="200dp"
+        android:layout_marginEnd="8dp"
         android:text="0"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintBottom_toBottomOf="@+id/ycoordtext"
+        app:layout_constraintEnd_toEndOf="@+id/mapInformationView"
+        app:layout_constraintTop_toTopOf="@+id/ycoordtext" />
 
     <TextView
         android:id="@+id/time"
@@ -158,7 +159,7 @@
         style="@android:style/Widget.Holo.ImageButton"
         android:layout_width="65dp"
         android:layout_height="65dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="64dp"
         android:background="@android:color/transparent"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
@@ -263,7 +264,6 @@
         android:layout_width="160dp"
         android:layout_height="40dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/change_color"
         android:fontFamily="casual"
@@ -271,10 +271,11 @@
         android:textColor="@color/change_textcolor"
         android:textOff="Obstacle"
         android:textOn="Cancel"
+        app:layout_constraintBottom_toBottomOf="@+id/waypointToggleButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/waypointToggleButton"
-        app:layout_constraintTop_toBottomOf="@+id/modeTextView" />
+        app:layout_constraintTop_toTopOf="@+id/waypointToggleButton" />
 
     <TextView
         android:id="@+id/selectSettingTextView"
@@ -284,7 +285,7 @@
         android:fontFamily="casual"
         android:text="Select Settings:"
         android:textColor="@color/darkblue"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/tiltSwitch"
         app:layout_constraintHorizontal_bias="0.15"
@@ -321,31 +322,28 @@
         android:id="@+id/modeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="112dp"
         android:fontFamily="casual"
         android:text="Mode:"
         android:textColor="@color/darkblue"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.988"
-        app:layout_constraintStart_toEndOf="@+id/tiltSwitch"
-        app:layout_constraintTop_toBottomOf="@+id/downButton" />
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tiltSwitch"
+        app:layout_constraintEnd_toEndOf="@+id/obstacleToggleButton"
+        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintStart_toStartOf="@+id/obstacleToggleButton"
+        app:layout_constraintTop_toTopOf="@+id/tiltSwitch" />
 
     <TextView
         android:id="@+id/currentModeTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginStart="4dp"
         android:fontFamily="casual"
         android:text="TBD"
         android:textColor="@color/darkblue"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/modeTextView"
         app:layout_constraintStart_toEndOf="@+id/modeTextView"
-        app:layout_constraintTop_toBottomOf="@+id/downButton" />
+        app:layout_constraintTop_toTopOf="@+id/modeTextView" />
 
     <ToggleButton
         android:id="@+id/autoToggleButton"
@@ -476,7 +474,7 @@
     <Spinner
         android:id="@+id/directionSpinner"
         android:layout_width="121dp"
-        android:layout_height="22dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:entries="@array/direction_arrays"
         android:spinnerMode="dropdown"
@@ -484,6 +482,23 @@
         app:layout_constraintStart_toEndOf="@+id/selectSettingTextView"
         app:layout_constraintTop_toBottomOf="@+id/mapInformationView"
         app:layout_constraintVertical_bias="0.285" />
+
+    <Button
+        android:id="@+id/printMDFbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="27dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/border"
+        android:backgroundTint="@color/turquoise"
+        android:fontFamily="casual"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:text="Print MDF string"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@+id/robotStatusTxt"
+        app:layout_constraintTop_toBottomOf="@+id/robotStatusTxt" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
